[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest"
version = "1.0.0"
description = "Python project with pytest"
authors = [
    { name="Abinash", email="abinashdash66.ad@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.1",
    "pytest>=7.0.0"
]
[tool.setuptools.packages.find]
include = ["ops"]
